# 16bit

./: .gitignore  README.md  main.cpp  meson.build
asm/: Cargo.toml
asm/src/: ast.rs  codegen.rs  common.rs  instructions.rs  lexer.rs  main.rs  parse.rs
core/: .clang-format  .gitignore  meson.build
core/src/: main.cpp
core/src/cpu/: cpu.cpp  cpu.hpp
core/src/devices/: screendevice.cpp
core/src/memory/: memory.hpp
core/tests/: cpu.cpp  memorymapped.cpp
src/: cpu.cpp  cpu.hpp  instructions.hpp  main.cpp  memory.cpp  memory.hpp
src/cpu/: cpu.cpp  instructions.hpp
src/devices/: screendevice.cpp  screendevice.hpp
src/memory/: IMemoryMapperDevice.hpp  memory.cpp  memory.hpp  memorymapper.cpp  memorymapper.hpp  writablememory.cpp  writablememory.hpp
src/utils/: macros.hpp
subprojects/: sergiusthebest-plog.wrap
tests/: cpu.cpp  memory.cpp  memorymapped.cpp  writablememory.cpp
